--- a/spring-boot-task-schedule/src/main/resources/static/JobManage.html
+++ b/spring-boot-task-schedule/src/main/resources/static/JobManage.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>QuartzDemo</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui@2.0.5/lib/theme-chalk/index.css">
+    <title>JobManage</title>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui@2.13.1/lib/theme-chalk/index.css">
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="http://cdn.bootcss.com/vue-resource/1.3.4/vue-resource.js"></script>
-    <script src="https://unpkg.com/element-ui@2.0.5/lib/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.13.1/index.js"></script>
 
     <style>
         #top {
-            background:#20A0FF;
-            padding:5px;
-            overflow:hidden
+            background: #20A0FF;
+            padding: 5px;
+            overflow: hidden
         }
     </style>
 
@@ -23,7 +23,6 @@
     <div id="top">
         <el-button type="text" @click="search" style="color:white">查询</el-button>
         <el-button type="text" @click="handleadd" style="color:white">添加</el-button>
-        </span>
     </div>
 
     <br/>
@@ -84,22 +83,26 @@
                     <el-button
                             size="small"
                             type="warning"
-                            @click="handlePause(scope.$index, scope.row)">暂停</el-button>
+                            @click="handlePause(scope.$index, scope.row)">暂停
+                    </el-button>
 
                     <el-button
                             size="small"
                             type="info"
-                            @click="handleResume(scope.$index, scope.row)">恢复</el-button>
+                            @click="handleResume(scope.$index, scope.row)">恢复
+                    </el-button>
 
                     <el-button
                             size="small"
                             type="danger"
-                            @click="handleDelete(scope.$index, scope.row)">删除</el-button>
+                            @click="handleDelete(scope.$index, scope.row)">删除
+                    </el-button>
 
                     <el-button
                             size="small"
                             type="success"
-                            @click="handleUpdate(scope.$index, scope.row)">修改</el-button>
+                            @click="handleUpdate(scope.$index, scope.row)">修改
+                    </el-button>
                 </template>
             </el-table-column>
         </el-table>
@@ -136,9 +139,9 @@
     </el-dialog>
 
     <el-dialog title="修改任务" :visible.sync="updateFormVisible">
-        <el-form :model="updateform">
+        <el-form :model="updateForm">
             <el-form-item label="表达式" label-width="120px" style="width:35%">
-                <el-input v-model="updateform.cronExpression" auto-complete="off"></el-input>
+                <el-input v-model="updateForm.cronExpression" auto-complete="off"></el-input>
             </el-form-item>
         </el-form>
         <div slot="footer" class="dialog-footer">
@@ -154,24 +157,19 @@
 </footer>
 
 <script>
-    var vue = new Vue({
-        el:"#test",
+    const vue = new Vue({
+        el: "#test",
         data: {
             //表格当前页数据
             tableData: [],
-
             //请求的URL
-            url:'job/queryjob',
-
+            url: 'job/query',
             //默认每页数据量
             pagesize: 10,
-
             //当前页码
             currentPage: 1,
-
             //查询的页码
             start: 1,
-
             //默认数据总数
             totalCount: 1000,
 
@@ -188,7 +186,7 @@
                 cronExpression: '',
             },
 
-            updateform: {
+            updateForm: {
                 jobName: '',
                 jobGroup: '',
                 cronExpression: '',
@@ -198,96 +196,110 @@
         methods: {
 
             //从服务器读取数据
-            loadData: function(pageNum, pageSize){
-                this.$http.get('job/queryjob?' + 'pageNum=' +  pageNum + '&pageSize=' + pageSize).then(function(res){
-                    console.log(res)
+            loadData: function (pageNum, pageSize) {
+                this.$axios.get('job/query?' + 'pageNum=' + pageNum + '&pageSize=' + pageSize).then(res => {
+                    console.log(res);
                     this.tableData = res.body.JobAndTrigger.list;
                     this.totalCount = res.body.number;
-                },function(){
+                }, function () {
                     console.log('failed');
                 });
             },
 
             //单行删除
-            handleDelete: function(index, row) {
-                this.$http.post('job/deletejob',{"jobClassName":row.job_NAME,"jobGroupName":row.job_GROUP},{emulateJSON: true}).then(function(res){
-                    this.loadData( this.currentPage, this.pagesize);
-                },function(){
+            handleDelete: function (index, row) {
+                this.$axios.post('job/delete', {
+                    "jobClassName": row.job_NAME,
+                    "jobGroupName": row.job_GROUP
+                }, {emulateJSON: true}).then(function (res) {
+                    this.loadData(this.currentPage, this.pagesize);
+                }, function () {
                     console.log('failed');
                 });
             },
 
             //暂停任务
-            handlePause: function(index, row){
-                this.$http.post('job/pausejob',{"jobClassName":row.job_NAME,"jobGroupName":row.job_GROUP},{emulateJSON: true}).then(function(res){
-                    this.loadData( this.currentPage, this.pagesize);
-                },function(){
+            handlePause: function (index, row) {
+                this.$axios.post('job/pause', {
+                    "jobClassName": row.job_NAME,
+                    "jobGroupName": row.job_GROUP
+                }, {emulateJSON: true}).then(function (res) {
+                    this.loadData(this.currentPage, this.pagesize);
+                }, function () {
                     console.log('failed');
                 });
             },
 
             //恢复任务
-            handleResume: function(index, row){
-                this.$http.post('job/resumejob',{"jobClassName":row.job_NAME,"jobGroupName":row.job_GROUP},{emulateJSON: true}).then(function(res){
-                    this.loadData( this.currentPage, this.pagesize);
-                },function(){
+            handleResume: function (index, row) {
+                this.$axios.post('job/resume', {
+                    "jobClassName": row.job_NAME,
+                    "jobGroupName": row.job_GROUP
+                }, {emulateJSON: true}).then(function (res) {
+                    this.loadData(this.currentPage, this.pagesize);
+                }, function () {
                     console.log('failed');
                 });
             },
 
             //搜索
-            search: function(){
+            search: function () {
                 this.loadData(this.currentPage, this.pagesize);
             },
 
             //弹出对话框
-            handleadd: function(){
+            handleadd: function () {
                 this.dialogFormVisible = true;
             },
 
             //添加
-            add: function(){
-                this.$http.post('job/addjob',{"jobClassName":this.form.jobName,"jobGroupName":this.form.jobGroup,"cronExpression":this.form.cronExpression},{emulateJSON: true}).then(function(res){
+            add: function () {
+                this.$axios.post('job/add', {
+                    "jobClassName": this.form.jobName,
+                    "jobGroupName": this.form.jobGroup,
+                    "cronExpression": this.form.cronExpression
+                }, {emulateJSON: true}).then(function (res) {
                     this.loadData(this.currentPage, this.pagesize);
                     this.dialogFormVisible = false;
-                },function(){
+                }, function () {
                     console.log('failed');
                 });
             },
 
             //更新
-            handleUpdate: function(index, row){
-                console.log(row)
+            handleUpdate: function (index, row) {
+                console.log(row);
                 this.updateFormVisible = true;
-                this.updateform.jobName = row.job_CLASS_NAME;
+                this.updateFormVisibleorm.jobName = row.job_CLASS_NAME;
                 this.updateform.jobGroup = row.job_GROUP;
             },
 
             //更新任务
-            update: function(){
-                this.$http.post
-                ('job/reschedulejob',
-                    {"jobClassName":this.updateform.jobName,
-                        "jobGroupName":this.updateform.jobGroup,
-                        "cronExpression":this.updateform.cronExpression
-                    },{emulateJSON: true}
-                ).then(function(res){
+            update: function () {
+                this.$axios.post
+                ('job/reschedule',
+                    {
+                        "jobClassName": this.updateForm.jobName,
+                        "jobGroupName": this.updateForm.jobGroup,
+                        "cronExpression": this.updateForm.cronExpression
+                    }, {emulateJSON: true}
+                ).then(function (res) {
                     this.loadData(this.currentPage, this.pagesize);
                     this.updateFormVisible = false;
-                },function(){
+                }, function () {
                     console.log('failed');
                 });
 
             },
 
             //每页显示数据量变更
-            handleSizeChange: function(val) {
+            handleSizeChange: function (val) {
                 this.pagesize = val;
                 this.loadData(this.currentPage, this.pagesize);
             },
 
             //页码变更
-            handleCurrentChange: function(val) {
+            handleCurrentChange: function (val) {
                 this.currentPage = val;
                 this.loadData(this.currentPage, this.pagesize);
             },
